--- a/index.html
+++ b/index.html
@@ -225,7 +225,44 @@
 
     <!-- start footer sction -->
     <footer>
+        <section class="container mx-auto w-5/6 lg:flex">
 
+
+            <div class="order-1 my-14 lg:order-2 lg:w-3/5 lg:ml-20 ">
+                <img src="/icons/XMLID 1.png" alt="">
+            </div>
+
+
+            <div class="order-2 lg:order-1 lg:my-14">
+                <div class="flex items-center   mb-6 shadow-inner">
+                    <img class="w-20 p-2" src="/icons/image 12.png" alt="">
+                    <div class="ml-6">
+                        <h3 class="text-2xl font-semibold my-4">Find the Perfect Fit</h3>
+                        <p class="mb-4">Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+
+                </div>
+                <div class="flex items-center    shadow-inner mb-6 ">
+                    <img class="w-20 p-2" src="/icons/image 13.png" alt="">
+                    <div class="ml-6">
+                        <h3 class="text-2xl font-semibold my-4">Free Exchanges</h3>
+                        <p class="mb-4">One of the many reasons you can shop with peace of mind.</p>
+                    </div>
+
+                </div>
+                <div class="flex items-center   shadow-inner mb-6 ">
+                    <img class="w-20 p-2" src="/icons/image 14.png" alt="">
+                    <div class="ml-6">
+                        <h3 class="text-2xl font-semibold my-4">Contact Our Seller</h3>
+                        <p class="mb-4">They are here to help you. That's quite literally what we pay them for.</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
     </footer>
     <!-- ends footer section -->
 
